# oportunidade_wbc

./: .dockerignore  .env.example  .gitattributes  .gitignore  API_OS_INTEGRACAO.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GUIA_ORDENS_SERVICO_ENGENHARIA.md  PLANO_PAINEL_OPORTUNIDADES.md  PLANO_SYNC_ORDENS_SERVICO.md  PLANO_WBC_ARVORE.md  README.md  USAGE_GUIDE.md  api.py  config.json  config.py  db_utils.py  deploy_monitor.bat  deploy_monitor.ps1  deploy_update.bat  docker-compose.yml  exemplo_avancado.py  export_os_json.py  extract_ordens_servico_engenharia.py  extract_os_impressao_views.py  extract_sap_to_supabase.py  extract_wbc_arvore.py  feriados_br.py  install_mcp_service.bat  install_monitor_task.ps1  install_services.bat  monitor_wbc_task.ps1  monitoring.py  pandas_guide.py  pipeline_core.py  pyproject.toml  requirements-dev.txt  requirements.txt  retry.py  (+11 more)
docs/: CONSUMO_DADOS.md  CONSUMO_VIEWS_IMPRESSAO.md
examples/: exemplo_avancado.py
maintenance/: clean_azure_logs.ps1
mcp/: .env.example  PLANO_FASE3.md  README.md  mcp_server.py  requirements.txt  serve_http.py
scripts/: __init__.py  _bootstrap.py  scheduled_execution.py  test_connections.py
sql/: alter_espelhos_alinhar_views_2026-07-10.sql  alter_vw_os_integracao_flags_processo_2026-07-15.sql  alter_vw_os_integracao_solda_2026-07-15.sql  ordens_servico_engenharia.sql  ordens_servico_engenharia_read_policy.sql  os_impressao_views.sql  vw_os_exped_arvore.sql  vw_os_exped_impressao.sql  vw_os_integracao.sql  vw_os_solda.sql  wbc_arvore.sql  wbc_arvore_read_policy.sql
tests/: conftest.py  test_api.py  (+15 more)
(+1 files in other folders)
